# advent-of-code

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  generate_days.py  generate_days.sh
2024/: BUILD.bazel
2024/01/: README.md
2024/01/src/: main.rs
2025/: BUILD.bazel
2025/01/: BUILD.bazel
2025/01/src/: main.rs
2025/02/: Cargo.toml
2025/02/src/: main.rs
2025/03/src/: main.rs
2025/04/: BUILD.bazel  Cargo.toml
2025/04/src/: main.rs
2025/05/: Cargo.toml
2025/06/: Cargo.toml
2025/07/: Cargo.toml
2025/08/: Cargo.toml
2025/09/: Cargo.toml
2025/10/: Cargo.toml
2025/10/src/: main.rs
2025/11/: Cargo.toml
2025/12/: Cargo.toml
2025/14/src/: main.rs
templates/: day_build.bazel.j2  year_build.bazel.j2
tools/python/: requirements.txt
