"""Advent of Code Bazel Workspace"""

module(
    name = "advent_of_code",
)

# ==============================================================================
# Import Bazel Modules
# ==============================================================================

bazel_dep(name = "rules_rust", version = "0.67.0")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_uv", version = "0.88.0")

# ==============================================================================
# Rust rules
# ==============================================================================

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# ==============================================================================
# Python rules
# ==============================================================================

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.12",
    requirements_lock = "//tools/python:requirements.txt",
)
use_repo(pip, "pip")
